# Canister-Architecture-PoC

./: .env.example  .gitignore  Cargo.toml  README.md  bucket_creation.sh  bucket_optimizer.sh  deploy.sh  dfx.json  dht_test.sh  package-lock.json  package.json  setup.sh  setup_linux.sh  start.sh  stop.sh  test.sh  test_examples.txt  tsconfig.json  webpack.config.js
docs/network/: createAd_sequence  createProfile_sequence  createVideo_sequence  createVideo_sequence.txt  getAd_sequence  getFeed_sequence  getProfile_sequence  getUserComments_sequence  getVideoComments_sequence  getVideo_sequence  getVideo_sequence.txt  userAction_sequence
src/: common_types.did
src/ad_manager/: Cargo.toml  ad_manager.did
src/ad_manager/ad_canister/: Cargo.toml  ad_canister  ad_canister.did
src/ad_manager/src/: lib.rs
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  profile.rs  video.rs
src/backend/tests/: common.rs  integration_test.rs
src/canister_tests/: Cargo.toml  README.md
src/canister_tests/src/: ad_manager.rs  backend.rs  main.rs  profile_backend.rs  util.rs  video.rs  video_backend.rs
src/profile_backend/: Cargo.toml  profile_backend.did
src/rust_video/: Cargo.toml  video.did
src/seeder/: Cargo.toml
src/seeder/src/: main.rs  util.rs
src/video_assets/: declarations.d.ts
src/video_backend/: Cargo.toml  video_backend.did
src/video_dht/: Cargo.toml  video_dht.did
src/video_dht_mo/: Buckets.mo  Table.mo
src/video_storage/: Canister_Storage.mo  Container_Storage.mo  Types.mo  Video_Storage.mo
src/video_types/: Cargo.toml
(+149 files in other folders)
