[package]
name = "canister_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.7.0"
tokio = { version = "1", features = ["full"]}
garcon = "0.2.3"
#candid = "0.7.6"
#candid_derive = "0.4.5"
#ic-utils = "0.5.0"
ic-cdk-macros = "0.3.1"
ic-types = "0.2.1"
serde = "1.0.126"
ic-cdk = "0.3.1"