[package]
name = "canister_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = { git = "https://github.com/dfinity/agent-rs" }
tokio = { version = "1", features = ["full"]}
garcon = "0.2.3"
ic-cdk-macros = "0.3.1"
ic-types = "0.2.1"
serde = "1.0.126"
ic-cdk = "0.3.1"
ring = {version = "0.16.11", features = ["std"]}
video_types = {path = "../../src/video_types"}
